# object-transportation

./: .clang-format  LICENSE  README.md  Untitled.ipynb
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
atta/: .gitignore  CMakeLists.txt  box-pushing.atta  cooperative-transport.atta
atta/src/: common.h  projectScript.cpp  projectScript.h  projectScriptExperiments.cpp  projectScriptUI.cpp  pusherCommon.cpp  pusherCommon.h  pusherComponent.cpp  pusherComponent.h  pusherPaperScript.cpp  pusherPaperScript.h  pusherScript.cpp  pusherScript.h
extra stuff/: Plotting and Outputs.ipynb
simulation/: CMakeLists.txt  object-transportation.atta
simulation/resources/: H-object.mtl  plus-object.mtl
simulation/src/: common.h  projectScript.cpp  projectScript.h  projectScriptExperiments.cpp  projectScriptUI.cpp  pusherCommon.cpp  pusherCommon.h  pusherComponent.cpp  pusherComponent.h  pusherPaperScript.cpp  pusherScript.cpp  pusherScript.h  pusherTeleopScript.cpp  pusherTeleopScript.h
webots/: .gitignore
webots/controllers/: pusher_common.py  pusher_globals.py
webots/controllers/pusher/: pusher (no IR).py  pusher COPY.py  pusher.cpp  pusher.py
webots/controllers/pusher_paper/: pusher_paper.py
webots/controllers/supervisor/: expTimings (backup example).csv  (+4 more)
webots/protos/: Pusher.proto  Wall.proto  boxObject.proto
webots/worlds/: .world_complex.wbproj  .world_experiment.wbproj  .world_experiment_2.wbproj  .world_reference.wbproj  box-pushing.wbt  cooperative-transport.wbt  world_complex.wbt  world_experiment.wbt  world_experiment_2.wbt  world_reference.wbt
